feat: Change URL to access static pages by deleting .html - MEED-1775 (#214)